--- a/Rainmaker/Rainmaker/Storyboards/HomeScreen.storyboard
+++ b/Rainmaker/Rainmaker/Storyboards/HomeScreen.storyboard
@@ -169,9 +169,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Qda-Tl-V34">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Qda-Tl-V34">
                                 <rect key="frame" x="0.0" y="88" width="375" height="641"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="homeFeedCell" rowHeight="228" id="ZoO-0b-kUO" customClass="HomeFeedTableViewCell" customModule="Rainmaker" customModuleProvider="target">
@@ -298,6 +297,12 @@
                             </tableView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="J1O-TT-R0g" firstAttribute="trailing" secondItem="Qda-Tl-V34" secondAttribute="trailing" id="06L-qp-RTy"/>
+                            <constraint firstItem="Qda-Tl-V34" firstAttribute="leading" secondItem="J1O-TT-R0g" secondAttribute="leading" id="8Tq-8n-9FX"/>
+                            <constraint firstItem="J1O-TT-R0g" firstAttribute="bottom" secondItem="Qda-Tl-V34" secondAttribute="bottom" id="Gji-iL-hmK"/>
+                            <constraint firstItem="Qda-Tl-V34" firstAttribute="top" secondItem="J1O-TT-R0g" secondAttribute="top" id="xAr-ET-y0S"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="J1O-TT-R0g"/>
                     </view>
                     <navigationItem key="navigationItem" title="Rainmaker" id="B16-Vv-YFn">
