--- a/Rainmaker/Rainmaker/Storyboards/Base.lproj/LaunchScreen.storyboard
+++ b/Rainmaker/Rainmaker/Storyboards/Base.lproj/LaunchScreen.storyboard
@@ -17,7 +17,18 @@
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="rainmaker text" translatesAutoresizingMaskIntoConstraints="NO" id="Ebh-kQ-lSN">
+                                <rect key="frame" x="20" y="265.5" width="335" height="156"/>
+                            </imageView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="Ebh-kQ-lSN" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="6P1-gh-hcB"/>
+                            <constraint firstItem="Ebh-kQ-lSN" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="MUp-UJ-3gZ"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Ebh-kQ-lSN" secondAttribute="trailing" constant="20" id="Nvc-rK-S4F"/>
+                            <constraint firstItem="Ebh-kQ-lSN" firstAttribute="centerY" secondItem="6Tk-OE-BBY" secondAttribute="centerY" id="kmq-8F-MjU"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                 </viewController>
@@ -26,4 +37,7 @@
             <point key="canvasLocation" x="53" y="375"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="rainmaker text" width="860" height="156"/>
+    </resources>
 </document>
