--- a/Rainmaker/Rainmaker/Storyboards/Search.storyboard
+++ b/Rainmaker/Rainmaker/Storyboards/Search.storyboard
@@ -52,8 +52,9 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="141" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="PBX-yW-8Bg">
-                                <rect key="frame" x="0.0" y="88" width="375" height="690"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="141" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="PBX-yW-8Bg">
+                                <rect key="frame" x="0.0" y="227" width="375" height="551"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="searchViewCell" rowHeight="141" id="6cf-i8-2fk" customClass="SearchTableViewCell" customModule="Rainmaker" customModuleProvider="target">
@@ -98,7 +99,7 @@
                                                     </constraints>
                                                 </stackView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="252" verticalHuggingPriority="251" verticalCompressionResistancePriority="751" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6qG-fm-fKX">
-                                                    <rect key="frame" x="20" y="21" width="340" height="19"/>
+                                                    <rect key="frame" x="20" y="21" width="340" height="19.333333333333329"/>
                                                     <fontDescription key="fontDescription" name="Avenir-Heavy" family="Avenir" pointSize="14"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
@@ -135,14 +136,42 @@
                                     <outlet property="delegate" destination="RvS-T1-ga8" id="WX6-Hp-7Ql"/>
                                 </connections>
                             </tableView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Search for bets or users" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KB2-R7-an6">
+                                <rect key="frame" x="95" y="100" width="178" height="24"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Gpm-rX-TqX">
+                                <rect key="frame" x="0.0" y="131" width="184" height="40"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" red="0.4941176471" green="0.83137254900000002" blue="0.68235294120000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <state key="normal" title="Button">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
+                                <connections>
+                                    <action selector="betsButtonPressed:" destination="RvS-T1-ga8" eventType="touchUpInside" id="Kzv-yw-72W"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xRY-dS-lGx">
+                                <rect key="frame" x="185" y="131" width="190" height="40"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" red="0.86515177539999999" green="0.86515177539999999" blue="0.86515177539999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <state key="normal" title="Button">
+                                    <color key="titleColor" cocoaTouchSystemColor="darkTextColor"/>
+                                </state>
+                                <connections>
+                                    <action selector="usersButtonPressed:" destination="RvS-T1-ga8" eventType="touchUpInside" id="f0O-mk-mev"/>
+                                </connections>
+                            </button>
+                            <searchBar contentMode="redraw" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="uQ7-D5-fSK">
+                                <rect key="frame" x="0.0" y="171" width="375" height="56"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </searchBar>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <constraints>
-                            <constraint firstItem="PBX-yW-8Bg" firstAttribute="leading" secondItem="NEk-hp-vR0" secondAttribute="leading" id="NkU-uD-ikZ"/>
-                            <constraint firstItem="NEk-hp-vR0" firstAttribute="top" secondItem="PBX-yW-8Bg" secondAttribute="top" id="raO-nr-Qf7"/>
-                            <constraint firstItem="NEk-hp-vR0" firstAttribute="trailing" secondItem="PBX-yW-8Bg" secondAttribute="trailing" id="vkh-MF-svH"/>
-                            <constraint firstItem="PBX-yW-8Bg" firstAttribute="bottom" secondItem="NEk-hp-vR0" secondAttribute="bottom" id="wfJ-C5-xcf"/>
-                        </constraints>
                         <viewLayoutGuide key="safeArea" id="NEk-hp-vR0"/>
                     </view>
                     <navigationItem key="navigationItem" title="Search" id="HtB-Z7-WDK">
@@ -154,7 +183,10 @@
                         </barButtonItem>
                     </navigationItem>
                     <connections>
+                        <outlet property="betsButton" destination="Gpm-rX-TqX" id="SeI-gO-kpe"/>
+                        <outlet property="searchBar" destination="uQ7-D5-fSK" id="Qx8-6n-y6k"/>
                         <outlet property="tableView" destination="PBX-yW-8Bg" id="FEO-zS-HvX"/>
+                        <outlet property="usersButton" destination="xRY-dS-lGx" id="atU-ox-wl2"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="cNs-q6-mwb" userLabel="First Responder" sceneMemberID="firstResponder"/>
