--- a/Rainmaker/Rainmaker/Storyboards/Bet.storyboard
+++ b/Rainmaker/Rainmaker/Storyboards/Bet.storyboard
@@ -13,7 +13,7 @@
         <!--Bet View Controller-->
         <scene sceneID="Mrg-WR-hdj">
             <objects>
-                <viewController id="Q2n-09-hmF" customClass="BetViewController" customModule="Rainmaker" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="betViewController" id="Q2n-09-hmF" customClass="BetViewController" customModule="Rainmaker" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="wiY-Fg-o3z">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
