--- a/Rainmaker/Rainmaker/Storyboards/Notifications.storyboard
+++ b/Rainmaker/Rainmaker/Storyboards/Notifications.storyboard
@@ -29,24 +29,36 @@
                                             <rect key="frame" x="0.0" y="0.0" width="375" height="79.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="avJ-pf-v4a">
-                                                    <rect key="frame" x="15" y="11" width="293" height="58"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                    <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="14"/>
-                                                    <nil key="textColor"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
-                                                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CjP-rn-xAW">
-                                                    <rect key="frame" x="316" y="11" width="44" height="58"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                    <state key="normal" image="Leaderboards">
-                                                        <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                                    </state>
-                                                    <connections>
-                                                        <action selector="expandButtonPressed:" destination="T2k-qH-PLc" eventType="touchUpInside" id="2AT-OB-3do"/>
-                                                    </connections>
-                                                </button>
+                                                <stackView opaque="NO" contentMode="scaleToFill" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="ufh-Up-4ur">
+                                                    <rect key="frame" x="16" y="5" width="343" height="69.5"/>
+                                                    <subviews>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="avJ-pf-v4a">
+                                                            <rect key="frame" x="0.0" y="0.0" width="275" height="69.5"/>
+                                                            <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="14"/>
+                                                            <nil key="textColor"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CjP-rn-xAW">
+                                                            <rect key="frame" x="283" y="0.0" width="60" height="69.5"/>
+                                                            <state key="normal" image="Leaderboards">
+                                                                <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                            </state>
+                                                            <connections>
+                                                                <action selector="expandButtonPressed:" destination="T2k-qH-PLc" eventType="touchUpInside" id="2AT-OB-3do"/>
+                                                            </connections>
+                                                        </button>
+                                                    </subviews>
+                                                </stackView>
                                             </subviews>
+                                            <constraints>
+                                                <constraint firstItem="ufh-Up-4ur" firstAttribute="centerX" secondItem="oWP-88-0pf" secondAttribute="centerX" id="3eJ-Nd-EEk"/>
+                                                <constraint firstItem="avJ-pf-v4a" firstAttribute="width" secondItem="oWP-88-0pf" secondAttribute="width" constant="-100" id="3hf-VX-QO7"/>
+                                                <constraint firstItem="ufh-Up-4ur" firstAttribute="centerY" secondItem="oWP-88-0pf" secondAttribute="centerY" id="B6H-UW-W1c"/>
+                                                <constraint firstItem="ufh-Up-4ur" firstAttribute="leading" secondItem="oWP-88-0pf" secondAttribute="leading" constant="16" id="fHf-0f-015"/>
+                                                <constraint firstItem="ufh-Up-4ur" firstAttribute="top" secondItem="oWP-88-0pf" secondAttribute="top" constant="5" id="otN-Fd-YmQ"/>
+                                                <constraint firstAttribute="trailing" secondItem="ufh-Up-4ur" secondAttribute="trailing" constant="16" id="re1-1H-eXy"/>
+                                                <constraint firstAttribute="bottom" secondItem="ufh-Up-4ur" secondAttribute="bottom" constant="5" id="yu0-P1-M7V"/>
+                                            </constraints>
                                         </tableViewCellContentView>
                                         <connections>
                                             <outlet property="expandButton" destination="CjP-rn-xAW" id="hBd-qL-gv5"/>
